# taskmux

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml
branding/: index.html
examples/: taskmux-backup.json  taskmux.toml  test-config.json
plans/: 01-task-url-path.md  02-worktree-lifecycle-commands.md
skills/taskmux/: SKILL.md
src/taskmux/: __init__.py  cli.py  main.py  tmux_manager.py
taskmux/: __init__.py  __main__.py  _log_pipe.py  agent.py  aliases.py  ca.py  cleanup.py  cli.py  config.py  daemon.py  dns_install.py  dns_server.py  env_export.py  errors.py  event_bus.py  events.py  global_config.py  hooks.py  host_resolver.py  init.py  ipc_client.py  models.py  output.py  paths.py  proxy.py  registry.py  service.py  shell_env.py  supervisor.py  tmux_manager.py  tunnel_wizard.py  tunnels.py  url.py  validate.py  worktree.py
taskmux/mcp/: __init__.py  broadcaster.py  install.py  scope.py  server.py
tests/: conftest.py  test_agent.py  test_aliases.py  test_ca.py  test_cleanup.py  test_cli.py  test_cli_daemon.py  test_config.py  test_daemon_api.py  test_daemon_pid.py  test_daemon_privilege_gate.py  test_dns_install.py  test_dns_server.py  test_env_export.py  test_event_bus.py  test_events.py  test_global_config.py  test_health_probes.py  test_hooks.py  test_host_resolver.py  test_init.py  test_log_pipe.py  test_mcp_broadcaster.py  test_mcp_install.py  test_mcp_scope.py  test_mcp_server.py  test_migration_v3.py  test_models.py  test_orphan_reconcile.py  test_output.py  test_paths_worktree.py  test_proxy.py  test_proxy_integration.py  test_registry.py  test_service.py  test_shell_env.py  test_skill.py  test_supervisor.py  test_tmux_manager.py  test_tunnel_wizard.py  (+4 more)
