[project]
name = "taskmux"
version = "0.1.0"
description = "Modern tmux development environment manager with real-time health monitoring, auto-restart, and WebSocket API"
readme = "README.md"
license-file = "LICENSE"
requires-python = ">=3.8"
authors = [
    {name = "Nik Cubrilovic", email = "git@nikcub.me"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]
keywords = ["tmux", "terminal", "session", "manager", "development", "daemon", "monitoring"]

dependencies = [
    "watchdog>=3.0.0",
    "libtmux>=0.37.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "aiofiles>=23.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
taskmux = "taskmux.main:main"

[project.urls]
Homepage = "https://github.com/nc9/taskmux"
Repository = "https://github.com/nc9/taskmux"
Issues = "https://github.com/nc9/taskmux/issues"

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"
source-include = ["taskmux/templates/*.md"]

[tool.uv.build-backend]