[project]
name = "taskmux"
version = "0.1.0"
description = "Modern tmux-based task manager for LLM development tools"
readme = "README.md"
license-file = "LICENSE"
requires-python = ">=3.8"
authors = [
    {name = "Nik Cubrilovic", email = "git@nikcub.me"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]
keywords = ["tmux", "terminal", "session", "manager", "development", "daemon", "monitoring"]

dependencies = [
    "watchdog>=3.0.0",
    "libtmux>=0.37.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "aiofiles>=23.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
]

[project.scripts]
taskmux = "taskmux.main:main"

[project.urls]
Homepage = "https://github.com/nc9/taskmux"
Repository = "https://github.com/nc9/taskmux"
Issues = "https://github.com/nc9/taskmux/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py38"
extend-exclude = [
    "crates/ty_vendored/vendor/",
    "crates/ruff/resources/",
    "crates/ruff_linter/resources/",
    "crates/ruff_python_formatter/resources/",
    "crates/ruff_python_parser/resources/",
    "crates/ruff_python_semantic/resources/"
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle (error)
    "F", # pyflakes
    "B", # bugbear
    "B9",
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "I", # isort
    "UP", # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
]

ignore = [
    # only relevant if you run a script with `python -0`,
    # which seems unlikely for any of the scripts in this repo
    "B011",
    # Leave it to the formatter to split long lines and
    # the judgement of all of us.
    "E501"
]

[tool.hatch.build.targets.wheel]
packages = ["src/taskmux"]

[tool.hatch.build.targets.sdist]
include = [
    "src/taskmux",
    "src/taskmux/templates/*.md",
    "README.md",
    "LICENSE",
]
