[project]
name = "taskmux"
version = "0.2.3"
description = "Modern tmux-based task manager for LLM development tools"
readme = "README.md"
license-file = "LICENSE"
requires-python = ">=3.11"
authors = [
    {name = "Nik Cubrilovic", email = "git@nikcub.me"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]
keywords = ["tmux", "terminal", "session", "manager", "development", "daemon", "monitoring"]

dependencies = [
    "watchdog>=3.0.0",
    "libtmux>=0.37.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "aiofiles>=23.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tomlkit>=0.13",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "basedpyright>=1.20",
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
taskmux = "taskmux.main:main"

[project.urls]
Homepage = "https://github.com/nc9/taskmux"
Repository = "https://github.com/nc9/taskmux"
Issues = "https://github.com/nc9/taskmux/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.hatch.build.targets.wheel]
packages = ["taskmux"]

[tool.hatch.build.targets.sdist]
include = [
    "taskmux",
    "README.md",
    "LICENSE",
]
